important notice about the morphological dictionary

--- a/Slides/index.html
+++ b/Slides/index.html
@@ -407,6 +407,7 @@ as canonical form and the grammatical code <samp class="entry gramsem">V</samp><
 			<li>Modify the second <code>&lt;N&gt;</code> box to store the matched noun in variable <code>$hypernym$</code> in the morphological mode</li>
 			<li class="next">Add <code>&lt;E&gt;/$hypernym.LEMMA$: $hyponym.LEMMA$</code> before the <em>final state</em></li>
 			<li class="next">Save this graph as <code>mine-hyponyms.grf</code></li>
+			<li class="next">In <mark>Info > Preferences... > Morphological dictionaries</mark> add <code>Dela/CISLEXru_igrok.bin</code></li>
 		</ol>
 	</div></section>
 	<section class="slide" id="MiningHyponyms3"><div>
