removed repeated item

--- a/Slides/index.html
+++ b/Slides/index.html
@@ -278,14 +278,13 @@ as canonical form and the grammatical code <samp class="entry gramsem">V</samp><
 			<li class="next"><code>&lt;MOT&gt;</code>: matches any token that consists of letters</li>
 			<li class="next"><code>&lt;MIN&gt;</code>: matches any lower-case token</li>
 			<li class="next"><code>&lt;MAJ&gt;</code>: matches any lower-case token</li>
-			<li class="next"><code>&lt;MAJ&gt;</code>: matches any upper-case token</li>
+			<li class="next"><code>&lt;PRE&gt;</code>: matches any token that starts with a capital letter</li>
 		</ul>
 	</div></section>
 	<section class="slide"><div>
 		<h2>Lexical masks. Special symbols</h2>
 		<ul>
-			<li><code>&lt;PRE&gt;</code>: matches any token that starts with a capital letter</li>
-			<li class="next"><code>&lt;DIC&gt;</code>: matches any word that is present in the dictionaries of the text</li>
+			<li><code>&lt;DIC&gt;</code>: matches any word that is present in the dictionaries of the text</li>
 			<li class="next"><code>&lt;SDIC&gt;</code>: matches any simple word in the text dictionaries</li>
 			<li class="next"><code>&lt;CDIC&gt;</code>: matches any composed word in the dictionaries of the text</li>
 			<li class="next"><code>&lt;TDIC&gt;</code>: matches any tagged token like <code>{XXX,XXX.XXX}</code></li>
