information about the grant

--- a/Slides/index.html
+++ b/Slides/index.html
@@ -47,6 +47,11 @@
 				margin: 0;
 				text-align: center;
 			}
+			p.grant {
+				line-height: 1em;
+				margin-top: 2em;
+				text-align: center;
+			}
 		</style>
 		<div class="conference clearfix">
 			<img src="pictures/logo-en_1.png" class="conference__logo"/>
@@ -57,6 +62,7 @@
 		</div>
 		<h2>Text Processing with Finite State Transducers in Unitex</h2>
 		<p class="author"><a href="http://about.me/alukanin">Artem Lukanin</a></p>
+		<p class="note grant">This work is partially supported by the RFH grant #13-04-12020<br>“New open electronic thesaurus for Russian”.</p>
 	</div></section>
 	<section class="slide"><div>
 		<h2>What is Unitex?</h2>
